JumpScript/tests/baselines/reference/parserParameterList11.errors.txt
tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList11.jump(1,8): error TS1047: A rest parameter cannot be optional.


==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList11.jump (1 errors) ====
    (...arg?) => 102;
           ~
!!! error TS1047: A rest parameter cannot be optional.